Add alt tags to bean boy games images

--- a/bean-boy-games.html
+++ b/bean-boy-games.html
@@ -94,13 +94,13 @@ and is wrapped around the whole page content, except for the footer in this exam
                                         class="w3-button w3-padding-large dracula-bg w3-border"><b>Turner Steam Page
                                             »</b></button></a></p>
                         </div>
-                        <img src="/images/turner-1.jpg" style="width:100%">
+                        <img src="/images/turner-1.jpg" alt="Turner Screenshot 1" style="width:100%">
                         <br />
                         <br />
-                        <img src="/images/turner-2.jpg" style="width:100%">
+                        <img src="/images/turner-2.jpg" alt="Turner Screenshot 2" style="width:100%">
                         <br />
                         <br />
-                        <img src="/images/turner-3.jpg" style="width:100%">
+                        <img src="/images/turner-3.jpg" alt="Turner Screenshot 3" style="width:100%">
                         <h4><b>Hot Squat</b></h4>
                         Welcome to Flynn Fitness, home of the Hot Squat. Prepare to undergo a rigorous test to not only
                         your legs, but also your will to do as many squats as you possibly can. Compete against your
@@ -123,13 +123,13 @@ and is wrapped around the whole page content, except for the footer in this exam
                                         class="w3-button w3-padding-large dracula-bg w3-border"><b>Hot Squat Steam Page
                                             »</b></button></a></p>
                         </div>
-                        <img src="/images/hot-squat-1.jpg" style="width:100%">
+                        <img src="/images/hot-squat-1.jpg" alt="Hot Squat Screenshot 1" style="width:100%">
                         <br />
                         <br />
-                        <img src="/images/hot-squat-2.jpg" style="width:100%">
+                        <img src="/images/hot-squat-2.jpg" alt="Hot Squat Screenshot 2" style="width:100%">
                         <br />
                         <br />
-                        <img src="/images/hot-squat-3.jpg" style="width:100%">
+                        <img src="/images/hot-squat-3.jpg" alt="Hot Squat Screenshot 3" style="width:100%">
                         <h4><b>UNTITLED</b></h4>
                         Post Code FF: Initializing startup sequence of: UNTITLED. Puzzle course loading… Logic test
                         loading… Discovery test loading… Loading complete. Please contact local administrator to
@@ -154,13 +154,13 @@ and is wrapped around the whole page content, except for the footer in this exam
                                         class="w3-button w3-padding-large dracula-bg w3-border"><b>UNTITLED Steam Page
                                             »</b></button></a></p>
                         </div>
-                        <img src="/images/untitled-1.jpg" style="width:100%">
+                        <img src="/images/untitled-1.jpg" alt="UNTITLED Screenshot 1" style="width:100%">
                         <br />
                         <br />
-                        <img src="/images/untitled-2.jpg" style="width:100%">
+                        <img src="/images/untitled-2.jpg" alt="UNTITLED Screenshot 2" style="width:100%">
                         <br />
                         <br />
-                        <img src="/images/untitled-3.jpg" style="width:100%">
+                        <img src="/images/untitled-3.jpg" alt="UNTITLED Screenshot 3" style="width:100%">
                         <h4><b>Hot Squat 2: New Glory</b></h4>
                         100% of the profits from the Steam sales of this game have been and will be donated to
                         RAICES:
@@ -218,13 +218,16 @@ and is wrapped around the whole page content, except for the footer in this exam
                                         class="w3-button w3-padding-large dracula-bg w3-border"><b>Hot Squat 2: New
                                             Glory Steam Page »</b></button></a></p>
                         </div>
-                        <img src="/images/hot-squat-new-glory-1.jpg" style="width:100%">
+                        <img src="/images/hot-squat-new-glory-1.jpg" alt="Hot Squat 2: New Glory Screenshot 1"
+                            style="width:100%">
                         <br />
                         <br />
-                        <img src="/images/hot-squat-new-glory-2.jpg" style="width:100%">
+                        <img src="/images/hot-squat-new-glory-2.jpg" alt="Hot Squat 2: New Glory Screenshot 2"
+                            style="width:100%">
                         <br />
                         <br />
-                        <img src="/images/hot-squat-new-glory-3.jpg" style="width:100%">
+                        <img src="/images/hot-squat-new-glory-3.jpg" alt="Hot Squat 2: New Glory Screenshot 3"
+                            style="width:100%">
                         </p>
                     </div>
                 </div>
