Add 'My Linux desktop' post

--- a/index.html
+++ b/index.html
@@ -81,6 +81,26 @@ and is wrapped around the whole page content, except for the footer in this exam
                     </div>
                 </div>
                 <!-- Blog entry -->
+                <div class="w3-card-4 w3-margin">
+                    <div class="w3-container">
+                        <h3><b>My Linux desktop</b></h3>
+                        <h5><span class="w3-opacity">November 15, 2020</span></h5>
+                    </div>
+                    <div class="w3-container">
+                        <p><img src="/images/my-linux-desktop.png" alt="My Linux Desktop Screenshot" style="width:100%">
+                            (Click <a href="/images/my-linux-desktop.png" target="_blank">here</a> for a full sized
+                            screenshot)
+                        </p>
+                        <div class="w3-row">
+                            <div class="w3-col m8 s12">
+                                <p><a href="/posts/my-linux-desktop.html"><button
+                                            class="w3-button w3-padding-large dracula-bg w3-border"><b>READ
+                                                MORE »</b></button></a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Blog entry -->
                 <div class="w3-card-4 w3-margin dracula-bg">
                     <div class="w3-container">
                         <h3><b>How to install and run Ableton Live 10 on Debian</b></h3>
@@ -89,7 +109,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                     <div class="w3-container">
                         <p>There are a few caveats to installing and running Ableton Live 10 on Linux, and I initially
                             had some issues getting it working on Debian that I couldn’t find solutions for online.
-                            Here’s how I got it working:
+                            Here’s how I got it working:</p>
                         <div class="w3-row">
                             <div class="w3-col m8 s12">
                                 <p><a href="/posts/ableton-on-debian.html"><button
