Add flatpak firefox hardware acceleration post, make sidebar smaller

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ and is wrapped around the whole page content, except for the footer in this exam
         <!-- Grid -->
         <div class="w3-row">
             <!-- Introduction menu -->
-            <div class="w3-col l4">
+            <div class="w3-col l2">
                 <!-- Navigation -->
                 <div class="w3-card w3-margin">
                     <div class="w3-container w3-padding dracula-current-line">
@@ -78,6 +78,25 @@ and is wrapped around the whole page content, except for the footer in this exam
                 <div class="w3-card-4 w3-margin">
                     <div class="w3-container w3-padding dracula-current-line">
                         <h4>Posts</h4>
+                    </div>
+                </div>
+                <!-- Blog entry -->
+                <div class="w3-card-4 w3-margin">
+                    <div class="w3-container">
+                        <h3><b>How to use hardware acceleration with Flatpak Firefox</b></h3>
+                        <h5><span class="w3-opacity">December 9, 2020</span></h5>
+                    </div>
+                    <div class="w3-container">
+                        <p>This is how I was able to get hardware acceleration working on Flatpak Firefox (version 83.0
+                            at the time of writing this). Note that I am using an AMD GPU for this, though I believe it
+                            should work with other brands as well. This guide is for the Xorg display server:</p>
+                        <div class="w3-row">
+                            <div class="w3-col m8 s12">
+                                <p><a href="/posts/flatpak-firefox-hardware-acceleration.html"><button
+                                            class="w3-button w3-padding-large dracula-bg w3-border"><b>READ
+                                                MORE »</b></button></a></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <!-- Blog entry -->
