Add mutt-protonmail-bridge post

--- a/index.html
+++ b/index.html
@@ -83,6 +83,31 @@ and is wrapped around the whole page content, except for the footer in this exam
                 <!-- Blog entry -->
                 <div class="w3-card-4 w3-margin">
                     <div class="w3-container">
+                        <h3><b>Using mutt, ProtonMail Bridge, and isync for email on Linux</b></h3>
+                        <h5><span class="w3-opacity">February 13, 2021</span></h5>
+                    </div>
+                    <div class="w3-container">
+                        <p>Recently, offlineimap was removed from many Linux distros due to it relying on Python 2, and
+                            I found myself needing a new solution for using mutt (my email client of choice) and
+                            ProtonMail Bridge. I was able to use the program isync as a substitute.
+                            My initial setup for mail with offlineimap was based off this excelent post:
+                            <a href=https://spaceandtim.es/code/protonmail_mutt
+                                target="_blank">https://spaceandtim.es/code/protonmail_mutt</a> so you can refer to it
+                            for a lot of the reasoning behind this configuration.
+                            I'm personally using Gentoo, but this should work on most distros.
+                        </p>
+                        <div class="w3-row">
+                            <div class="w3-col m8 s12">
+                                <p><a href="/posts/mutt-protonmail-bridge.html"><button
+                                            class="w3-button w3-padding-large dracula-bg w3-border"><b>READ
+                                                MORE »</b></button></a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Blog entry -->
+                <div class="w3-card-4 w3-margin">
+                    <div class="w3-container">
                         <h3><b>How to use hardware acceleration with Flatpak Firefox</b></h3>
                         <h5><span class="w3-opacity">December 9, 2020</span></h5>
                     </div>
@@ -175,7 +200,8 @@ and is wrapped around the whole page content, except for the footer in this exam
     <footer class="w3-container dracula-green w3-padding-small w3-margin-top">
         <p>© 2020 Kevin Thomas. This website is free of JavaScript and uses the <a href="https://draculatheme.com/"
                 target="_blank">Dracula</a> theme. Get the source code for this website
-            <a href="https://gitlab.com/KevinNThomas/kevinthomas.dev-no-javascript" target="_blank">here</a>.</p>
+            <a href="https://gitlab.com/KevinNThomas/kevinthomas.dev-no-javascript" target="_blank">here</a>.
+        </p>
     </footer>
 </body>
 
