Add gentoo desktop and openbsd guide posts

--- a/index.html
+++ b/index.html
@@ -83,6 +83,45 @@ and is wrapped around the whole page content, except for the footer in this exam
                 <!-- Blog entry -->
                 <div class="w3-card-4 w3-margin">
                     <div class="w3-container">
+                        <h3><b>Installing and setting up OpenBSD on Thinkpad T480 + improving slowness</b></h3>
+                        <h5><span class="w3-opacity">March 17, 2021</span></h5>
+                    </div>
+                    <div class="w3-container">
+                        <p>This guide will explain how I installed and setup OpenBSD on my Thinkpad T480 with full
+                          disk encryption, and how I improved the slowness I was experiencing out of the box.
+                        </p>
+                        <div class="w3-row">
+                            <div class="w3-col m8 s12">
+                                <p><a href="/posts/openbsd-thinkpadt480.html"><button
+                                            class="w3-button w3-padding-large dracula-bg w3-border"><b>READ
+                                                MORE »</b></button></a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Blog entry -->
+                <div class="w3-card-4 w3-margin">
+                    <div class="w3-container">
+                        <h3><b>My Gentoo Linux desktop</b></h3>
+                        <h5><span class="w3-opacity">March 17, 2021</span></h5>
+                    </div>
+                    <div class="w3-container">
+                        <p><img src="/images/gentoo-desktop.png" alt="My Linux Desktop Screenshot" style="width:100%">
+                            (Click <a href="/images/gentoo-desktop.png" target="_blank">here</a> for a full sized
+                            screenshot)
+                        </p>
+                        <div class="w3-row">
+                            <div class="w3-col m8 s12">
+                                <p><a href="/posts/my-gentoo-desktop.html"><button
+                                            class="w3-button w3-padding-large dracula-bg w3-border"><b>READ
+                                                MORE »</b></button></a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Blog entry -->
+                <div class="w3-card-4 w3-margin">
+                    <div class="w3-container">
                         <h3><b>Using mutt, ProtonMail Bridge, and isync for email on Linux</b></h3>
                         <h5><span class="w3-opacity">February 13, 2021</span></h5>
                     </div>
@@ -127,7 +166,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                 <!-- Blog entry -->
                 <div class="w3-card-4 w3-margin">
                     <div class="w3-container">
-                        <h3><b>My Linux desktop</b></h3>
+                        <h3><b>My Debian Linux desktop</b></h3>
                         <h5><span class="w3-opacity">November 15, 2020</span></h5>
                     </div>
                     <div class="w3-container">
