Update Gitlab / Github username

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@ and is wrapped around the whole page content, except for the footer in this exam
                     </div>
                     <ul class="w3-ul w3-hoverable dracula-bg">
                         <li class="w3-padding-16">
-                            <span class="w3-large"><a href="https://gitlab.com/KevinNThomas"
+                            <span class="w3-large"><a href="https://gitlab.com/KevinThomas0"
                                     target="_blank">GitLab</a></span><br>
                         </li>
                         <li class="w3-padding-16">
-                            <span class="w3-large"><a href="https://github.com/KevinNThomas"
+                            <span class="w3-large"><a href="https://github.com/KevinThomas0"
                                     target="_blank">GitHub</a></span><br>
                         </li>
                     </ul>
@@ -200,7 +200,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     <footer class="w3-container dracula-green w3-padding-small w3-margin-top">
         <p>© 2020 Kevin Thomas. This website is free of JavaScript and uses the <a href="https://draculatheme.com/"
                 target="_blank">Dracula</a> theme. Get the source code for this website
-            <a href="https://gitlab.com/KevinNThomas/kevinthomas.dev-no-javascript" target="_blank">here</a>.
+            <a href="https://gitlab.com/KevinThomas0/kevinthomas.dev-no-javascript" target="_blank">here</a>.
         </p>
     </footer>
 </body>
