--- a/music.html
+++ b/music.html
@@ -88,7 +88,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                         </audio>
                         <h4><b>Links</b></h4>
                         <div class="w3-col m8 s12">
-                            <p><a href="https://kevinnthomas.bandcamp.com/" target="_blank"><button
+                            <p><a href="https://KevinThomas0.bandcamp.com/" target="_blank"><button
                                         class="w3-button w3-padding-large dracula-bg w3-border"><b>My Bandcamp
                                             »</b></button></a></p>
                         </div>
@@ -110,7 +110,8 @@ and is wrapped around the whole page content, except for the footer in this exam
     <footer class="w3-container dracula-green w3-padding-small w3-margin-top">
         <p>© 2020 Kevin Thomas. This website is free of JavaScript and uses the <a href="https://draculatheme.com/"
                 target="_blank">Dracula</a> theme. Get the source code for this website
-            <a href="https://gitlab.com/KevinNThomas/kevinthomas.dev-no-javascript" target="_blank">here</a>.</p>
+            <a href="https://gitlab.com/KevinThomas0/kevinthomas.dev-no-javascript" target="_blank">here</a>.
+        </p>
     </footer>
 </body>
 
