--- a/open-source-projects.html
+++ b/open-source-projects.html
@@ -74,7 +74,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                         GNU General Public License (Version 3).
                         <br />
                         <br />
-                        The repository is hosted on my <a href="https://gitlab.com/KevinNThomas/debian-gaming-setup"
+                        The repository is hosted on my <a href="https://gitlab.com/KevinThomas0/debian-gaming-setup"
                             target="_blank">Gitlab</a>.
                         <h5>Features</h5>
                         The script is written in Bash, and guides the user through the installation of the following
@@ -105,7 +105,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                         <br />
                         <br />
                         The repository is hosted on my <a
-                            href="https://gitlab.com/KevinNThomas/kde-virtual-desktops-polybar"
+                            href="https://gitlab.com/KevinThomas0/kde-virtual-desktops-polybar"
                             target="_blank">Gitlab</a>.
                         </p>
                     </div>
@@ -120,7 +120,8 @@ and is wrapped around the whole page content, except for the footer in this exam
     <footer class="w3-container dracula-green w3-padding-small w3-margin-top">
         <p>© 2020 Kevin Thomas. This website is free of JavaScript and uses the <a href="https://draculatheme.com/"
                 target="_blank">Dracula</a> theme. Get the source code for this website
-            <a href="https://gitlab.com/KevinNThomas/kevinthomas.dev-no-javascript" target="_blank">here</a>.</p>
+            <a href="https://gitlab.com/KevinThomas0/kevinthomas.dev-no-javascript" target="_blank">here</a>.
+        </p>
     </footer>
 </body>
 
