Update usernames and formatting

--- a/music.html
+++ b/music.html
@@ -93,7 +93,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                                             »</b></button></a></p>
                         </div>
                         <div class="w3-col m8 s12">
-                            <p><a href="https://soundcloud.com/kevin-n-thomas" target="_blank"><button
+                            <p><a href="https://soundcloud.com/kevinthomas0" target="_blank"><button
                                         class="w3-button w3-padding-large dracula-bg w3-border"><b>My Soundcloud
                                             »</b></button></a></p>
                         </div>
