Update twitter username

--- a/about-me-and-contact.html
+++ b/about-me-and-contact.html
@@ -87,7 +87,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                                             Facebook »</b></button></a></p>
                         </div>
                         <div class="w3-col m8 s12">
-                            <p><a href="https://twitter.com/kevint0517" target="_blank"><button
+                            <p><a href="https://twitter.com/kevinthomasdev" target="_blank"><button
                                         class="w3-button w3-padding-large dracula-bg w3-border"><b>Development
                                             Twitter »</b></button></a></p>
                         </div>
