--- a/lightworks.html
+++ b/lightworks.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Open Source Projects</title>
+<title>Lightworks</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/css/w3.css">
@@ -69,7 +69,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                         <p>
                             Lightworks is a music puzzle game I’m currently developing. In Lightworks, you use critical
                             listening skills to complete songs by matching up sections of a track - piece by piece. I’m
-                            developing Lightworks using the Unity game engine and C#. It will be released in 2020.
+                            developing Lightworks using the Unity game engine and C#. It will be released in soon™.
                             <br />
                             <br />
                             More information coming soon…
@@ -84,7 +84,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
     <!-- Footer -->
     <footer class="w3-container dracula-green w3-padding-small w3-margin-top">
-        <p>© 2020 Kevin Thomas. This website is free of JavaScript and uses the <a href="https://draculatheme.com/"
+        <p>© 2021 Kevin Thomas. This website is free of JavaScript and uses the <a href="https://draculatheme.com/"
                 target="_blank">Dracula</a> theme. Get the source code for this website
             <a href="https://gitlab.com/KevinThomas0/kevinthomas.dev-no-javascript" target="_blank">here</a>.
         </p>
