--- a/open-source-projects.html
+++ b/open-source-projects.html
@@ -67,6 +67,19 @@ and is wrapped around the whole page content, except for the footer in this exam
                 <div class="w3-card-4 w3-margin">
                     <div class="w3-container">
                         <p>
+						<h4><b>Alpine Linux Package Maintainer</b></h4>
+						I maintain several packages for the Alpine Linux distribution, one of my favorite Linux
+						distributions. I have contributed several aports to their repositories. For a list of
+						packages I maintain, you can go here:
+						<a href="https://pkgs.alpinelinux.org/packages?name=&branch=edge&maintainer=Kevin+Thomas"
+							target="_blank">
+							https://pkgs.alpinelinux.org/packages?name=&branch=edge&maintainer=Kevin+Thomas</a>
+
+						<h4><b>CryptoScamDB-Lists</b></h4>
+						Various lists in plain text format from CrytoScamDB to be used with services such as Pi-hole.
+						The repository is hosted on my <a href="https://gitlab.com/KevinThomas0/cryptoscamdb-lists"
+                            target="_blank">Gitlab</a>.
+
                         <h4><b>debian-gaming-setup</b></h4>
                         <h5>Overview</h5>
                         debian-gaming-setup is an interactive shell script for installing recommended tools to game
@@ -118,7 +131,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
     <!-- Footer -->
     <footer class="w3-container dracula-green w3-padding-small w3-margin-top">
-        <p>© 2020 Kevin Thomas. This website is free of JavaScript and uses the <a href="https://draculatheme.com/"
+        <p>© 2021 Kevin Thomas. This website is free of JavaScript and uses the <a href="https://draculatheme.com/"
                 target="_blank">Dracula</a> theme. Get the source code for this website
             <a href="https://gitlab.com/KevinThomas0/kevinthomas.dev-no-javascript" target="_blank">here</a>.
         </p>
